Markdown-based lab-notebook

--- a/notebook/2016-08-29-BICseq-testing/2016-08-29-BICseq-testing.Rmd
+++ b/notebook/2016-08-29-BICseq-testing/2016-08-29-BICseq-testing.Rmd
@@ -1,6 +1,11 @@
+---
+layout: default
+title: Testing the BICseq tool
+---
+
 Load package (warnings, messages suppressed)
 
-```{r results=FALSE}
+```{r results=FALSE, warning=FALSE, message=FALSE}
 library(BICseq)
 ```
 
