Added featimg to posts

--- a/notebook/2017-01-30-common-experiment-snv/2017-01-30-common-experiment-snv.Rmd
+++ b/notebook/2017-01-30-common-experiment-snv/2017-01-30-common-experiment-snv.Rmd
@@ -1,7 +1,10 @@
 ---
 title: Somatic SNVs and Indels by HaplotypeCaller
 layout: default
+featimg: "barchart-1.png"
 ---
+
+TODO
 
 ## Introduction
 
@@ -73,7 +76,7 @@ singleton.freq / kept.vars
 
 The same information as a barchart:
 
-```{r}
+```{r barchart}
 barchart(singleton.freq, main = "Sample-specific variants")
 ```
 
