--- a/notebook/2016-08-29-BICseq-testing/2016-08-29-BICseq-testing.Rmd
+++ b/notebook/2016-08-29-BICseq-testing/2016-08-29-BICseq-testing.Rmd
@@ -3,6 +3,8 @@ layout: default
 title: Testing the BICseq tool
 ---
 
+TODO
+
 Load package (warnings, messages suppressed)
 
 ```{r results=FALSE, warning=FALSE, message=FALSE}
