--- a/notebook/2017-05-29-vcf-comparisons/2017-05-29-vcf-comparisons.Rmd
+++ b/notebook/2017-05-29-vcf-comparisons/2017-05-29-vcf-comparisons.Rmd
@@ -1,7 +1,10 @@
 ---
 layout: default
 title: "Comparing Callsets: Callers and Referenfe Tissues"
+featimg: "venn-caller-neun_mn-snvs-1.png"
 ---
+
+TODO
 
 ```{r echo=FALSE, warning=FALSE, message=FALSE}
 library(lme4)
